Created application file to conect h2 or mysql or postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.profiles.active=mysql
 
+spring.application.name=Spring Boot Config Biblioteca
+
+app.message=This is the Primary Application Property for ${spring.application.name}
