--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-spring.profiles.active=mysql
+#spring.profiles.active=mysql
+#
+#spring.application.name=Spring Boot Config Biblioteca
+#
+#app.message=This is the Primary Application Property for ${spring.application.name}
 
-spring.application.name=Spring Boot Config Biblioteca
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
-app.message=This is the Primary Application Property for ${spring.application.name}
+# Datasource
+spring.datasource.url=jdbc:h2:file:/C:/Users/Master/Documents/dio/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
